fix: align search to the right

--- a/polaris.shopify.com/src/components/Header/Header.module.scss
+++ b/polaris.shopify.com/src/components/Header/Header.module.scss
@@ -83,6 +83,7 @@
   display: flex;
   align-items: center;
   width: 18.25rem; // Align with TOC on guidelines pages
+  margin-left: auto;
 
   .Icon {
     display: flex;
